# Codium

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
include/: CMakeLists.txt  MyH.h
shared/: sharedlib.cpp
src/: main.cpp  source.cpp
